# antibob

./: .clangd  .gitignore  .gitmodules  .typos.toml  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  ddnet.yml
cmake/: FindZLIB.cmake
scripts/: update_abi.sh
src/: antibob.cpp  antibob.h  antibot.cpp  base.cpp  base.h  gameserver.cpp  gameserver.h  interface.cpp  network.h
src/antibob/: interface.cpp
src/antibob/bob/: antibob.cpp  antibob.h  antibob_abi.cpp  antibob_abi.h  antibot_player.cpp  antibot_player.h  cmdline_arguments.cpp  cmdline_arguments.h  collision.cpp  collision.h  commands.cpp  commands.h  config.cpp  config.h  config_variables.h  console.cpp  console.h  detection_event.cpp  detection_event.h  detection_events.h  gameserver.cpp  gameserver.h  gameworld.cpp  gameworld.h  global_uuid_manager.cpp  network.cpp  network.h  pending_punish.cpp  pending_punish.h  protocol_ex.cpp  protocol_ex.h  protocol_ex_msgs.h  str.cpp  str.h  uuid_manager.cpp  uuid_manager.h  version.h
src/bob/: antibob.cpp  antibob.h  antibot_player.cpp  antibot_player.h  commands.cpp  commands.h  config.cpp  config.h  config_variables.h  console.cpp  console.h  detection_event.cpp  detection_event.h  gameserver.cpp  gameserver.h  global_uuid_manager.cpp  network.cpp  network.h  protocol_ex.h  protocol_ex_msgs.h  uuid_manager.cpp  uuid_manager.h
src/ddnet/polybob/: system.cpp  system.h
src/ddnet/polybob/antibot/: antibot_data.h  antibot_interface.h
src/ddnet/polybob/base/: color.h  detect.h  dynamic.h  hash.cpp  hash.h  hash_bundled.cpp  hash_ctxt.h  hash_libtomcrypt.cpp  lock.h  log.cpp  log.h  logger.h  math.h  system.cpp  system.h  types.h  vmath.h  windows.cpp  windows.h
src/ddnet/polybob/base/system/: fs.cpp  fs.h  net.cpp  net.h  shell.cpp  shell.h  str.cpp  str.h
src/ddnet/polybob/base/unicode/: tolower.cpp  tolower.h
src/ddnet/polybob/engine/: http.h  message.h  storage.h  uuid.h
src/ddnet/polybob/engine/client/: updater.h
src/ddnet/polybob/engine/shared/: bob_uuid_manager.cpp  bob_uuid_manager.h  compression.cpp  compression.h  global_bob_uuid_manager.cpp  global_uuid_manager.cpp  http.cpp  http.h  jobs.cpp  jobs.h  linereader.cpp  linereader.h  packer.cpp  packer.h  protocol.h  protocol7.h  protocol_ex.cpp  protocol_ex.h  protocol_ex_msgs.h  storage.cpp  teehistorian_ex.cpp  teehistorian_ex.h  uuid_manager.cpp  uuid_manager.h
src/ddnet/polybob/game/: gamecore.cpp  gamecore.h  mapitems.h  mapitems_ex.cpp  mapitems_ex.h  tuning.h  version.h
src/ddnet/polybob/game/server/: teeinfo.cpp  teeinfo.h
src/test/: bobtest.cpp  bobtest.h
src/test/bob/: console.cpp  sample.cpp  str_test.cpp
